[package]
name = "spacebar-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "staticlib" ]

[dependencies]
libsignal-protocol = { git = "https://github.com/signalapp/libsignal-client", tag = "v0.11.0" }
cxx = "*"
rand = { version = "0.7.3", features = [ "getrandom" ] }

[build-dependencies]
cxx-build = "*"
