[package]
name = "spacebar-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "staticlib" ]

[dependencies]
libsignal-protocol = { git = "https://github.com/signalapp/libsignal-client", tag = "v0.16.0" }
cxx = "1.0"
rand_core = { version = "0.5.1", features = [ "getrandom" ] }
futures-executor = "0.3"
async-trait = "0.1"
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"

[build-dependencies]
cxx-build = "1.0"
